// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`class Node renders correctly by toDot method has some attributes 1`] = `
"test [
  label = \\"this is test\\",
  color = red,
];"
`;

exports[`class Node renders correctly by toDot method node with comment multi line comment 1`] = `
"// this is comment.
// second line.
test;"
`;

exports[`class Node renders correctly by toDot method node with comment single line comment 1`] = `
"// this is comment.
test;"
`;

exports[`class Node renders correctly by toDot method simple node 1`] = `"test;"`;
